# django-scalar

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  scalar.py
.github/workflows/: codeql.yml  lint.yml  publish-python-package.yml  qa.yml  tests.yml
docs/: README.md
src/django_scalar/: apps.py  get_filter_parameters.py
src/django_scalar/templates/django_scalar/: scalar.html
src/django_scalar/tests/: test_get_filter_parameters.py
src/tests/: manage.py
