[project]
name = "django-scalar"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
authors = [
]
requires-python = ">=3.11"
dependencies = [
    "drf-spectacular>=0.28.0",
    "django-filter >= 24.1",
]

[project.optional-dependencies]
dev = [
  "ruff",
]
build = [
    "hatchling>=1.26.3",
]

[build-system]
requires = ["hatchling >= 1.26.3"]
build-backend = "hatchling.build"
